# Jobin

./: .gitignore  CMakeLists.txt  README.md  TODO  compile_commands.json  main.cpp  makefile  makefile~
.clangd/index/: atomic.hpp.359E1B742F592270.idx  config.hpp.B596D20D591DF2E5.idx  fcontext.h.BFC768835AB6FB63.idx  fiber.cpp.A5C6B90D7FD4C491.idx  fiber.hpp.F0BA0F19FF1239C2.idx  fiber_pool_fixed.hpp.210BD395C489D851.idx  job.cpp.9C640D8124DFF7CC.idx  job.hpp.97F3BFF09C9D3D6D.idx  job_manager.cpp.FF43BCEBE0890E94.idx  job_manager.hpp.E1E5977D3DAEFB8A.idx  job_priority_queue.hpp.98FCA55021913DE1.idx  job_queues.cpp.512439FE18C6283D.idx  job_queues.hpp.21A66705D88F0239.idx  jump_combined_all_macho_gas.S.C560C412E077F168.idx  jump_x86_64_sysv_macho_gas.S.F94DEB7936730CB4.idx  make_combined_all_macho_gas.S.334FAD1E89E712CF.idx  make_x86_64_sysv_macho_gas.S.8F90BC96A6ED54C9.idx  mutex.cpp.FEAF04C6C6C5F0BC.idx  mutex.hpp.DC0C75B26B39833D.idx  ontop_combined_all_macho_gas.S.732B30A5E06A69C9.idx  ontop_x86_64_sysv_macho_gas.S.78B5CD1E03A5DDD9.idx  pool_allocator.cpp.BD14C929D69694B4.idx  pool_allocator.hpp.6AE39A248C0B7208.idx  promise.hpp.6B30C94FC4985D68.idx  promise_resolver.hpp.07A567AE3278527A.idx  ring_buffer.hpp.D227A77938C5E5DF.idx  spin_lock.cpp.D51AB15D469F19FE.idx  spin_lock.hpp.1EB9201C77D7307C.idx  stack.c.C900D0312882B6F1.idx  thread.cpp.E6FCACF2FE4F2BA9.idx  thread.hpp.9E561F1D0416F0A2.idx  waiting_job.hpp.84A4313B6D6660B3.idx  worker.cpp.BBAD602303F7E833.idx  worker.hpp.EAAA4A3E0AE88A62.idx
cmake/: android.cmake  android.toolchain.cmake
jobin/: #jobin.hpp#  #promise_resolver.hpp#  atomic.hpp  config.hpp  enums.hpp  fiber.cpp  fiber.hpp  fiber_pool_dynamic.hpp  fiber_pool_fixed.hpp  invoker.hpp  job.cpp  job.hpp  job_handle.hpp  job_manager.cpp  job_manager.hpp  job_priority_queue.hpp  job_queues.cpp  job_queues.hpp  jobin.hpp  memory.hpp  mutex.cpp  mutex.hpp  pool_allocator.cpp  pool_allocator.hpp  promise.hpp  promise_resolver.hpp  ring_buffer.hpp  spin_lock.cpp  spin_lock.hpp  stack.hpp  thread.cpp  thread.hpp  thread_pthread_imp.hpp  thread_windows_imp.hpp  vector.hpp  waiting_job.hpp  worker.cpp  worker.hpp
tests/: CMakeLists.txt  _job.cpp  _worker.cpp  atomic.cpp  fiber.cpp  fiber_pool_fixed.cpp  job.cpp  job_manager.cpp  jobin.cpp  promise.cpp  promise_resolver.cpp  ring_buffer.cpp  thread.cpp  worker.cpp
